// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Icon should match snapshot CancelIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot CloseIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot DescriptionIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot DescriptionOutlinedIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M8 16h8v2H8zM8 12h8v2H8z"
      />
      <path
        d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot ErrorIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot ErrorOutlineIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot HomeIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot HomeOutlinedIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M12 5.69l5 4.5V18h-2v-6H9v6H7V10.19l5-4.5M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot InfoIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot InfoOutlinedIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zM11 11h2v6h-2z"
      />
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot PeopleIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot SearchIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <g>
      <path
        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </g>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot TemplatesIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <svg
      className="icon__svg"
      id="Layer_1"
      version="1.1"
      viewBox="0 0 24 24"
    >
      <style
        type="text/css"
      >
        .st0{opacity:   0.87;} .st1{fill - opacity:0.87;}
      </style>
      <polygon
        className="st0"
        points="11.8,13.7 9.3,16.2 8.2,15.1 7.2,16.2 8.2,17.3 8.2,17.3 9.3,18.3 10.4,17.3 10.4,17.3 12.8,14.8 "
      />
      <polygon
        className="st0"
        points="11.8,9.7 9.3,12.2 8.2,11.1 7.2,12.2 8.2,13.3 8.2,13.3 9.3,14.3 10.4,13.3 10.4,13.3 12.8,10.8 "
      />
      <path
        className="st1"
        d="M20.8,10.3c-0.5-0.5-1.1-0.5-1.5-0.1l-0.7,0.7l1.5,1.5l0.7-0.7C21.2,11.3,21.2,10.7,20.8,10.3z"
      />
      <polygon
        className="st1"
        points="13,16.5 13,18 14.5,18 19.4,13.1 17.9,11.6 "
      />
      <g>
        <rect
          className="st1"
          height="2"
          width="2"
          x="4"
          y="14"
        />
        <polygon
          className="st1"
          points="12,4 13,4 13,9 17.5,9 19.2,7.2 14,2 12,2 	"
        />
        <rect
          className="st1"
          height="2"
          width="2"
          x="4"
          y="6"
        />
        <rect
          className="st1"
          height="2"
          width="2"
          x="4"
          y="10"
        />
        <rect
          className="st1"
          height="2"
          width="2"
          x="8"
          y="2"
        />
        <path
          className="st1"
          d="M18,17.3V20H6v-2H4v2c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2v-4.7L18,17.3z"
        />
        <path
          className="st1"
          d="M6,2C4.9,2,4,2.9,4,4h2V2z"
        />
      </g>
    </svg>
  </svg>
</span>
`;

exports[`Icon Icon should match snapshot ThemesIcon 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <svg
      className="icon__svg"
      id="Layer_1"
      version="1.1"
      viewBox="0 0 24 24"
    >
      <style
        type="text/css"
      >
        .st0{fill - opacity:0.87;}
      </style>
      <path
        className="st0"
        d="M18,20H6V4h7v5h4.5l1.8-1.8L14,2H6C4.9,2,4,2.9,4,4v16c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2v-4.7l-2,2V20z"
      />
      <path
        className="st0"
        d="M21.7,8c-0.1,0-0.3,0.1-0.4,0.2l-5,5l1.5,1.5l5-5c0.2-0.2,0.2-0.6,0-0.8l-0.7-0.7C22,8.1,21.8,8,21.7,8z M15.2,14.1c-0.9,0-1.7,0.7-1.7,1.7c0,0.7-0.6,1.1-1.1,1.1c0.5,0.7,1.4,1.1,2.2,1.1c1.2,0,2.2-1,2.2-2.2 C16.9,14.9,16.2,14.1,15.2,14.1z"
      />
    </svg>
  </svg>
</span>
`;

exports[`Icon should match snapshot type default 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  />
</span>
`;

exports[`Icon should match snapshot type home 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  />
</span>
`;

exports[`Icon should match snapshot type info 1`] = `
<span
  className="icon icon--size-md"
  data-testid="icon"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  />
</span>
`;
